changes made to the query
